@@ -1,3 +1,7 @@
+10/04/2017 - Added a new button to re-use the last used pdf, so the user
+												doesn't have to select the same file with the file
+												browser.
+
 10/07/2017 - Merged everything in main.c instead splitting the code on modules.
 
 17/01/2015 - Added support for custom css, so you can choose
